--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,19 +1,20 @@
 # Enable truecolors and italics
 set -g default-terminal "xterm-256color-italic"
 set -ga terminal-overrides ",*256col*:Tc"
+
 # remap prefix from 'C-b' to 'C-a'
-# unbind C-b
-set-option -g prefix M-Space
-bind-key M-Space send-prefix
+unbind C-b
+set-option -g prefix C-Space
+bind-key C-Space send-prefix
 
 # split panes using | and -
-bind | split-window -h
-bind - split-window -v
+bind v split-window -h
+bind h split-window -v
 unbind '"'
 unbind %
 
 # use the vim motion keys to move between panes and resizing
-bind-key -n C-S-h select-pane -L
-bind-key -n C-S-j select-pane -D
-bind-key -n C-S-k select-pane -U
-bind-key -n C-S-l select-pane -R
+bind-key -n C-M-h select-pane -L
+bind-key -n C-M-j select-pane -D
+bind-key -n C-M-k select-pane -U
+bind-key -n C-M-l select-pane -R
