--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Enable truecolors and italics
-set -g default-terminal "xterm-256color-italic"
+set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
 # remap prefix from 'C-b' to 'C-a'
@@ -9,7 +9,7 @@ bind-key C-Space send-prefix
 
 # split panes using | and -
 bind v split-window -h
-bind h split-window -v
+bind s split-window -v
 unbind '"'
 unbind %
 
@@ -18,3 +18,6 @@ bind-key -n C-M-h select-pane -L
 bind-key -n C-M-j select-pane -D
 bind-key -n C-M-k select-pane -U
 bind-key -n C-M-l select-pane -R
+
+# Enable the mouse
+set-option -g mouse on
