alacritty: add 5px padding on all sides

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -65,6 +65,9 @@ env:
   #startup_mode: Windowed
 window:
   startup_mode: Fullscreen
+  padding:
+    x: 5
+    y: 5
 
   # Window title
   #title: Alacritty
