alacritty: change window mode to Maximized

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -64,7 +64,7 @@ env:
   #   - SimpleFullscreen
   #startup_mode: Windowed
 window:
-  startup_mode: Fullscreen
+  startup_mode: Maximized
   padding:
     x: 5
     y: 5
