--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,10 +2,10 @@
 set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-# remap prefix from 'C-b' to 'C-a'
-unbind C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+# remap prefix from 'C-b' to 'C-Space'
+# unbind C-b
+# set-option -g prefix C-Space
+# bind-key C-Space send-prefix
 
 # split panes using | and -
 bind v split-window -h
